# url_shortener

./: README.md  docker-compose.yaml
api/: .coveragerc  .gitignore  Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
api/config/: settings.py  urls.py
api/postman_collection/: URL Shortener Heroku.postman_collection.json  URL Shortener local.postman_collection.json
api/schemas/: URL Shortener API.yaml
api/shortener/: models.py  serializers.py  urls.py  views.py
api/shortener/migrations/: 0001_initial.py
api/users/migrations/: 0001_initial.py
envs/: .gitignore
