[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bartosz Szymik <szymik.bartek@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
